feat(websocket): add web socket, part 2
